Bug 434343 - Latte-dock dock leaves blurry area after trying to move the dock to a different screen
Summary: Latte-dock dock leaves blurry area after trying to move the dock to a differe...
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: git (master)
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-12 21:51 UTC by sibway
Modified: 2021-03-13 15:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
A video of this bug happening. The left screen is my destination screen, and the right one is the source screen (869.63 KB, video/webm)
2021-03-12 21:51 UTC, sibway
Details
Layout file used in video after the bug occured (1.49 KB, text/plain)
2021-03-12 23:11 UTC, sibway
Details
Original Layout file before bug (1.49 KB, text/plain)
2021-03-13 09:31 UTC, sibway
Details
Log from begin to bug (26.56 KB, text/plain)
2021-03-13 09:32 UTC, sibway
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sibway 2021-03-12 21:51:35 UTC
Created attachment 136631 [details]
A video of this bug happening. The left screen is my destination screen, and the right one is the source screen

SUMMARY
When trying to change the screen of a dock to anything else other than "Follow Primary Screen" instead of changing the screen it will leave a blurry area where the dock used to be


STEPS TO REPRODUCE
1. Right click on a dock
2. Select "Edit dock"
3. Change the Screen option under the Behaviour tab from "Follow Primary Screen" to anything else

OBSERVED RESULT
A blurry area appears where the dock used to be, and the dock itself disappears

EXPECTED RESULT
The dock moves to the screen you selected during step 3

SOFTWARE/OS VERSIONS
OS: Arch linux (Kernel Version 5.11.5-arch1-1)
KDE Plasma Version: 5.21.2
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION

In this case I tried to change from "Follow Primary Screen" to "HDMI-0" 

The output I get after following the steps to reproduce using the debug flag:
[Debug : 22:21:19.302302]"DP-0"
[Debug : 22:21:23.207207]"current index changed!!! :2"
[Debug : 22:21:23.207207]"screen must be changed..."
[Debug : 22:21:23.207207]"START of SyncLatteViewsToScreens ...."
[Debug : 22:21:23.207207]"LAYOUT :::  \"Default\""
[Debug : 22:21:23.207207]"screen count changed -+-+  2"
[Debug : 22:21:23.207207]"PRIMARY SCREEN ::  \"DP-0\""
[Debug : 22:21:23.207207]"LATTEVIEWS MAP ::  QHash()"
[Debug : 22:21:23.207207]"syncLatteViewsToScreens: view must be deleted... for containment: 1  at screen: \"DP-0\""
[Debug : 22:21:23.207207]"end of, syncLatteViewsToScreens ...."
[Debug : 22:21:23.208208]"dock view deleting..."
[Warning : 22:21:23.209209]"file:///usr/share/latte/indicators/default/package/config/config.qml:371: TypeError: Cannot read property 'configuration' of null"
[Warning : 22:21:23.209209]"file:///usr/share/latte/indicators/default/package/config/config.qml:361: TypeError: Cannot read property 'configuration' of null"
[Warning : 22:21:23.209209]"file:///usr/share/latte/indicators/default/package/config/config.qml:353: TypeError: Cannot read property 'configuration' of null"
[Warning : 22:21:23.209209]"file:///usr/share/latte/indicators/default/package/config/config.qml:342: TypeError: Cannot read property 'configuration' of null"
[Warning : 22:21:23.209209]"file:///usr/share/latte/indicators/default/package/config/config.qml:343: TypeError: Cannot read property 'configuration' of null"
[Warning : 22:21:23.209209]"file:///usr/share/latte/indicators/default/package/config/config.qml:331: TypeError: Cannot read property 'configuration' of null"
[Warning : 22:21:23.209209]"file:///usr/share/latte/indicators/default/package/config/config.qml:323: TypeError: Cannot read property 'configuration' of null"
[Warning : 22:21:23.209209]"file:///usr/share/latte/indicators/default/package/config/config.qml:320: TypeError: Cannot read property 'latteTasksArePresent' of null"
[Warning : 22:21:23.209209]"file:///usr/share/latte/indicators/default/package/config/config.qml:286: TypeError: Cannot read property 'configuration' of null"
[Warning : 22:21:23.209209]"file:///usr/share/latte/indicators/default/package/config/config.qml:272: TypeError: Cannot read property 'configuration' of null"
[Warning : 22:21:23.209209]"file:///usr/share/latte/indicators/default/package/config/config.qml:222: TypeError: Cannot read property 'configuration' of null"
[Warning : 22:21:23.209209]"file:///usr/share/latte/indicators/default/package/config/config.qml:220: TypeError: Cannot read property 'configuration' of null"
[Warning : 22:21:23.209209]"file:///usr/share/latte/indicators/default/package/config/config.qml:207: TypeError: Cannot read property 'configuration' of null"
[Warning : 22:21:23.209209]"file:///usr/share/latte/indicators/default/package/config/config.qml:177: TypeError: Cannot read property 'configuration' of null"
[Warning : 22:21:23.209209]"file:///usr/share/latte/indicators/default/package/config/config.qml:139: TypeError: Cannot read property 'configuration' of null"
[Warning : 22:21:23.209209]"file:///usr/share/latte/indicators/default/package/config/config.qml:103: TypeError: Cannot read property 'configuration' of null"
[Warning : 22:21:23.209209]"file:///usr/share/latte/indicators/default/package/config/config.qml:44: TypeError: Cannot read property 'configuration' of null"
[Debug : 22:21:23.288288]"VisibilityManager deleting..."
[Debug : 22:21:23.288288]"WindowsTracker removing..."
[Debug : 22:21:23.303303]"latte view qml source deleting..."
[Warning : 22:21:23.342342]"file:///usr/share/latte/indicators/default/package/config/config.qml:369: TypeError: Cannot read property 'optionsWidth' of null"
[Warning : 22:21:23.342342]"file:///usr/share/latte/indicators/default/package/config/config.qml:358: TypeError: Cannot read property 'optionsWidth' of null"
[Warning : 22:21:23.342342]"file:///usr/share/latte/indicators/default/package/config/config.qml:339: TypeError: Cannot read property 'optionsWidth' of null"
[Warning : 22:21:23.342342]"file:///usr/share/latte/indicators/default/package/config/config.qml:329: TypeError: Cannot read property 'optionsWidth' of null"
[Warning : 22:21:23.342342]"file:///usr/share/latte/indicators/default/package/config/config.qml:225: TypeError: Cannot read property 'optionsWidth' of null"
[Warning : 22:21:23.342342]"file:///usr/share/latte/indicators/default/package/config/config.qml:47: TypeError: Cannot read property 'optionsWidth' of null"
Comment 1 Michail Vourlakos 2021-03-12 22:53:59 UTC
that was fixed four days ago, are you sure you are using latest master?
Comment 2 sibway 2021-03-12 22:59:11 UTC
(In reply to Michail Vourlakos from comment #1)
> that was fixed four days ago, are you sure you are using latest master?

Yes. I use the aur package of latte dock (latte-dock-git) and the output of "pacman -Q latte-dock" gives me "latte-dock-git r5141.32f4c3f7-1" which is the latest version of master
Comment 3 Michail Vourlakos 2021-03-12 23:06:03 UTC
Send me also your layout file I think I know what is happening
Comment 4 sibway 2021-03-12 23:11:48 UTC
Created attachment 136633 [details]
Layout file used in video after the bug occured

Alright. I've added the layout file I used in the video
Comment 5 Michail Vourlakos 2021-03-13 08:16:57 UTC
No I want the layout before the bug occured in order to reproduce in my system. With this layout I can not reproduce.

in Plasma System settings what is your animation speed? in the video it looks almost as disabled animations.
Comment 6 Michail Vourlakos 2021-03-13 08:24:09 UTC
something is weird in your system, send also the full output of:
latte-dock -d 

from the launch of latte application
Comment 7 sibway 2021-03-13 09:31:33 UTC
Created attachment 136638 [details]
Original Layout file before bug
Comment 8 sibway 2021-03-13 09:32:35 UTC
Created attachment 136639 [details]
Log from begin to bug
Comment 9 sibway 2021-03-13 09:41:08 UTC
I've added the original layout file and the log you asked for. As for the animation speed, it is just KDE's default, so midway between slow and instant.
Comment 10 Michail Vourlakos 2021-03-13 09:48:55 UTC
This can be fixed only by being both online, I will upload in a specific git branch some commits for debugging and you at the same time installing it and giving me back the output.

Is that possible?
Comment 11 sibway 2021-03-13 10:12:41 UTC
Yes, that works for me
Comment 12 Michail Vourlakos 2021-03-13 11:42:40 UTC
(In reply to sibway from comment #11)
> Yes, that works for me

can you add me in telegram? my username is psifidotos
Comment 13 Michail Vourlakos 2021-03-13 15:16:50 UTC
Git commit 76b6317f9e85219d863dadbb4180cc38ffc2cec4 by Michail Vourlakos.
Committed on 13/03/2021 at 15:12.
Pushed by mvourlakos into branch 'master'.

validate screen ids and store them properly

M  +4    -2    app/screenpool.cpp

https://invent.kde.org/plasma/latte-dock/commit/76b6317f9e85219d863dadbb4180cc38ffc2cec4