validate screen ids and store them properly

BUG:434343